用户注册功能

--- a/miniprogram-7/docs/后端联调接口说明.md
+++ b/miniprogram-7/docs/后端联调接口说明.md
@@ -6,6 +6,7 @@
 ## 2. 已可用接口
 - `GET /healthz`：健康检查
 - `POST /auth/wx-login`：微信登录，返回 JWT
+- `POST /auth/email-register`：邮箱注册（注册成功即返回 JWT）
 - `GET /users/me`：当前用户信息（需 Bearer Token）
 - `GET /papers/feed`：论文流（需 Bearer Token）
 - `GET /papers/:id`：论文详情（标题/摘要/作者/链接，需 Bearer Token）
@@ -15,6 +16,19 @@
 ## 3. 鉴权方式
 - 请求头：`Authorization: Bearer <token>`
 - `token` 来源：`POST /auth/wx-login` 成功返回的 `token`
+  或 `POST /auth/email-register` 成功返回的 `token`
+
+## 3.1 邮箱注册示例
+```bash
+curl -X POST "http://111.229.204.242:8081/auth/email-register" \
+  -H "Content-Type: application/json" \
+  -d '{
+    "email":"alice@example.com",
+    "password":"Passw0rd!123",
+    "fullName":"Alice",
+    "fieldOfStudy":"NLP"
+  }'
+```
 
 ## 4. Feed 查询参数
 - `page`：页码，默认 `1`
