登陆+profile页面显示用户名

--- a/miniprogram-7/docs/后端联调接口说明.md
+++ b/miniprogram-7/docs/后端联调接口说明.md
@@ -7,6 +7,7 @@
 - `GET /healthz`：健康检查
 - `POST /auth/wx-login`：微信登录，返回 JWT
 - `POST /auth/email-register`：邮箱注册（注册成功即返回 JWT）
+- `POST /auth/email-login`：邮箱密码登录（账号或密码错误返回 401）
 - `GET /users/me`：当前用户信息（需 Bearer Token）
 - `GET /papers/feed`：论文流（需 Bearer Token）
 - `GET /papers/:id`：论文详情（标题/摘要/作者/链接，需 Bearer Token）
@@ -27,6 +28,16 @@ curl -X POST "http://111.229.204.242:8081/auth/email-register" \
     "password":"Passw0rd!123",
     "fullName":"Alice",
     "fieldOfStudy":"NLP"
+  }'
+```
+
+## 3.2 邮箱登录示例
+```bash
+curl -X POST "http://111.229.204.242:8081/auth/email-login" \
+  -H "Content-Type: application/json" \
+  -d '{
+    "email":"alice@example.com",
+    "password":"Passw0rd!123"
   }'
 ```
 
