Update docs for review simulator

--- a/miniprogram-7/docs/后端技术架构规划.md
+++ b/miniprogram-7/docs/后端技术架构规划.md
@@ -1,5 +1,13 @@
 # Research Pilot 后端技术架构规划（V1）
 
+## 0. 当前落地更新（2026-02-18）
+- 已落地 `Node.js + Express + PostgreSQL + Redis + Nginx (Docker Compose)`。
+- 小程序生产联调入口为 CloudBase AnyService。
+- `Review Simulator` 已使用异步任务模式：
+  - `POST /lab/review-simulator/tasks`
+  - `GET /lab/review-simulator/tasks/:taskId`
+  用于规避 AnyService 长请求超时（`code 102002`）。
+
 ## 1. 目标与约束
 - 目标：在现有微信小程序前端基础上，快速落地稳定可扩展的后端。
 - 约束：
