--- a/miniprogram-7/docs/后端联调接口说明.md
+++ b/miniprogram-7/docs/后端联调接口说明.md
@@ -9,10 +9,14 @@
 - `POST /auth/email-register`：邮箱注册（注册成功即返回 JWT）
 - `POST /auth/email-login`：邮箱密码登录（账号或密码错误返回 401）
 - `GET /users/me`：当前用户信息（需 Bearer Token）
+- `PUT /users/me/profile`：更新昵称/头像（需 Bearer Token）
 - `GET /papers/feed`：论文流（需 Bearer Token）
 - `GET /papers/:id`：论文详情（标题/摘要/作者/链接，需 Bearer Token）
 - `POST /papers/:id/action`：论文动作 `PASS|MARK|READ`（需 Bearer Token）
 - `GET /profile/dashboard`：个人统计（需 Bearer Token）
+- `POST /lab/review-simulator`：同步审稿（兼容接口，适合小文本）
+- `POST /lab/review-simulator/tasks`：创建异步审稿任务（推荐）
+- `GET /lab/review-simulator/tasks/:taskId`：查询异步审稿任务状态（推荐）
 
 ## 3. 鉴权方式
 - 请求头：`Authorization: Bearer <token>`
@@ -77,3 +81,47 @@ docker exec -i rp-postgres psql -U rp_user -d research_pilot < /opt/research-pil
 ## 7. 新增环境变量
 - `SEMANTIC_SCHOLAR_API_KEY`：Semantic Scholar 官方 API Key
 - `DEFAULT_FEED_KEYWORDS`：默认推荐检索词（用户输入留空时使用）
+- `LLM_API_KEY`：AI 审稿模型 API Key
+- `LLM_BASE_URL`：模型服务 base URL（示例 `https://api-inference.modelscope.cn`）
+- `REVIEW_MODEL_NAME`：审稿模型名（默认 `deepseek-ai/DeepSeek-V3.2`）
+
+## 8. Review Simulator（推荐：异步任务）
+
+### 8.1 创建任务
+```bash
+curl -X POST "http://111.229.204.242:8081/lab/review-simulator/tasks" \
+  -H "Authorization: Bearer <token>" \
+  -H "Content-Type: application/json" \
+  -d '{
+    "fileName": "draft.pdf",
+    "mimeType": "application/pdf",
+    "extension": "pdf",
+    "fileUrl": "https://<cloud-temp-url>"
+  }'
+```
+
+返回示例：
+```json
+{
+  "task": {
+    "taskId": "uuid",
+    "status": "PENDING"
+  }
+}
+```
+
+### 8.2 查询任务
+```bash
+curl -H "Authorization: Bearer <token>" \
+  "http://111.229.204.242:8081/lab/review-simulator/tasks/<taskId>"
+```
+
+状态说明：
+- `PENDING`：任务已创建
+- `RUNNING`：正在审稿
+- `DONE`：审稿完成，可取 `review`
+- `FAILED`：审稿失败，可看 `error`
+
+### 8.3 同步接口说明
+- `POST /lab/review-simulator` 仍可用，但 AnyService 场景下大文件/长处理更容易超时。
+- 小程序当前已默认切到异步任务模式，规避 `cloud.callContainer 102002` 超时问题。
